# PostcodeParse

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  postcode_parser.iss  pyproject.toml
src/postcode_parse/: _constants.py  _log.py  data_processing.py  io_utils.py  output.py  postcode_parse.py  updater.py
tests/: ONSPD_TEST.csv  PAF-TEST.csv
