[project]
name = "postcode_parse"
description = "Parses postcodes to present in a particular pattern"
authors = [
  {name = "Matthew Armstrong"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"simplekml==1.3.6",
"questionary==2.0.1",
"tqdm==4.64.1"
]
version = "1.0.2"

[project.optional-dependencies]
dev = [
  "mypy",
  "pyinstaller",
  "pre-commit",
  "ruff",
  "types-tqdm",
  "types-PyYAML",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C4",   # flake8-comprehensions
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "C90", # mccabe
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]

[[tool.mypy.overrides]]
module = [
    "simplekml"
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
