[project]
name = "postcode_parse"
description = "Parses postcodes to present in a particular pattern"
authors = [
  {name = "Matthew Armstrong"},
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
"packaging",
"questionary",
"requests",
"simplekml",
"tqdm",
]
version = "1.1.0"

[project.optional-dependencies]
dev = [
  "mypy",
  "pyinstaller",
  "pre-commit",
  "ruff",
  "types-tqdm",
  "types-PyYAML",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "C4",   # flake8-comprehensions
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
    "C90", # mccabe
    "N",   # pep8-naming
    "ANN", # flake8-annotations
]

[[tool.mypy.overrides]]
module = [
    "simplekml"
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
